--- a/doc/AnalisiRequisiti/AnalisiDeiRequisiti.tex
+++ b/doc/AnalisiRequisiti/AnalisiDeiRequisiti.tex
@@ -740,7 +740,6 @@ Il sistema consente di modificare la dimensione dei caratteri del testo di una c
 \label{listarequisiti}
 I requisiti elencati in seguito si dividono per tipologia (funzionale, prestazionale, di qualit\`a, di interfacciamento, d'ambiente); 
 per ognuna \`e presente una classificazione per classe di importanza (obbligatorio, desiderabile, facoltativo). Viene inoltre indicata la fonte usando un riferimento alle aspettative descritte in \textit{Aspettative.pdf}.
-Tutti i requisiti elencati in seguito derivano unicamente ed esplicitamente dal capitolato.
 \subsezione{Requisiti funzionali (RF)}
 \subsubsezione{Obbligatori (RFO)}
 \begin{elenconumerato}[\textbf{RFO-}]{\subsubsecindent}
@@ -778,13 +777,6 @@ Tutti i requisiti elencati in seguito derivano unicamente ed esplicitamente dal 
 \item{ACF-2 - AJAXDRAW permette la creazione di spirali.}
 \item{ACF-2 - AJAXDRAW permette di utilizzare il disegno calligrafico o pennellato.}
 \item{ AJAXDRAW permette di ruotare un oggetto di 90 gradi secondo l'asse latitudinale.}
-\end{elenconumerato}
-
-%facoltativi
-\subsubsezione{Facoltativi (RFF)}
-\begin{elenconumerato}[\textbf{RFF-}]{\subsubsecindent}
-\item{ACF-2 - AJAXDRAW permette la creazione di spirali.}
-\item{ACF-2 - AJAXDRAW permette di utilizzare il disegno calligrafico o pennellato.}
 \end{elenconumerato}
 
 %requisiti prestazionali
@@ -842,6 +834,120 @@ Tutti i requisiti elencati in seguito derivano unicamente ed esplicitamente dal 
 \begin{elenconumerato}[\textbf{RAD-}]{\subsubsecindent}
 \item{ACF-3 - AJAXDRAW garantisce la compatibilit\`a con il browser Microsoft Internet Explorer, il quale non implementa a pieno HTML 5, tramite la libreria \H{}excanvas\H{} creata da Google.}
 \end{elenconumerato}
+
+\newpage
+
+ \subsezione{Tracciamento Requisiti - Aspettative}
+\begin{table}[h]
+\begin{center}
+     \begin{tabular}
+           {@{\extracolsep{\fill}}|c|c|}
+     \hline
+%%%%%%%%%%%%%%INTESTAZIONE COLONNE%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+      \textbf{Requisiti} & \textbf{Aspettative} \\
+%%%%%%%%%%%%%%FINE INTESTAZIONE COLONNE%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+      \hline
+     RPO-1 RQO-9 & ACO-1 \\
+     \hline
+     RFO-1 RFO-2 RFO-3 RFO-4 RFO-5 RFO-6 RFO-7 \\ RFO-8 RFO-11 RFO-12 RFO-13 RFO-14 & ACO-2  \\
+     \hline
+     RFO-8  RFO-9 RFO-10 & ACO-3\\
+     \hline
+     RFO-15 RFO-16 & ACO-4 \\
+     \hline
+     RQO-1 RQO-7 RQO-8 RAO-1 RAO-2 RAO-6 & ACO-5 \\
+     \hline
+     RAO-3 & ACO-6 \\
+      \hline
+     RIO-1 RIO-2 RIO-3 RIO-4 & ACO-7 \\
+     \hline
+     RQO-2 RQO-3 RQO-4 RQO-5 RQO-6 RAO-4 & ACO-8 \\
+     \hline
+     RFO-17 RFO-18 & ACF-1 \\
+     \hline
+     RFD-1 RFD-2 RFF-1 RFF-2 & ACF-2 \\
+     \hline
+     RAD-1 & ACF-3 \\
+     \hline
+     RAO-5 & ACD-1 \\
+     
+%%%%%%%%%%% PARTE DA MODIFICARE %%%%%%%%%%%%%%%%
+    \hline %%FINE RIGA
+%%%%%%%%%%% FINE PARTE DA MODIFICARE %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+    \end{tabular}
+  \caption{Requisiti - Aspettative} %INSERIRE DIDASCALIA - SE NECESSARIA -
+  \label{tab:reqasp}
+  \end{center}
+\end{table}
+
+\newpage
+
+ \subsezione{Tracciamento Requisiti - Fonte Associata}
+\begin{table}[h]
+\begin{center}
+     \begin{tabular}
+           {@{\extracolsep{\fill}}|c|c|}
+     \hline
+%%%%%%%%%%%%%%INTESTAZIONE COLONNE%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+      \textbf{Requisiti} & \textbf{Fonte Associata} \\
+%%%%%%%%%%%%%%FINE INTESTAZIONE COLONNE%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+      \hline
+     RA0-1 & F01 \\
+     \hline
+     RFO-17 & F01  \\
+     \hline
+     RIO-2  RIO-4 & F01\\
+     \hline
+     RIO-3 & F01 \\
+     \hline
+     RFO-13 & F01 \\
+     \hline
+     RFO-14 & F01 \\
+      \hline
+     RFO-15 RFO-16 & F01 \\
+     \hline
+     RFO-1 RFO-2 RFO-9 & F01 \\
+     \hline
+     RFO-3 RFO-9 &  F01 \\
+     \hline
+     RFO-4 RFO-9 & F01 \\
+     \hline
+     RFO-5 RFO-9 & F01 \\
+     \hline
+     RFO-6 RFO-7 RFO-9 & F01 \\
+     \hline
+     RFO-9 & F01 \\
+     \hline
+     RFF-1 RFO-9 & F01 \\
+     \hline
+     RFD-1 RFO-9 & F01 \\
+     \hline
+     RFF-2 RFO-9 & F01 \\
+     \hline 
+     RFD-2 RFO-9 & F01 \\
+     \hline
+     RFO-7 & F01 \\
+     \hline
+     RFO-9 & F01 \\
+     \hline
+     RFO-8 & F01 \\
+     \hline
+     RFO-10 & F01 \\
+     \hline
+     RFO-18 & F01 \\
+     \hline
+     RFD-3 & F01 \\
+     \hline
+     RFF-3 & F02 \\
+     
+%%%%%%%%%%% PARTE DA MODIFICARE %%%%%%%%%%%%%%%%
+    \hline %%FINE RIGA
+%%%%%%%%%%% FINE PARTE DA MODIFICARE %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+    \end{tabular}
+  \caption{Requisiti - Fonte Associata} %INSERIRE DIDASCALIA - SE NECESSARIA -
+  \label{tab:reqfonte}
+  \end{center}
+\end{table}
 
 \newpage
 
