--- a/doc/SpecificaTecnica/SpecificaTecnica.tex
+++ b/doc/SpecificaTecnica/SpecificaTecnica.tex
@@ -425,7 +425,7 @@ Implementa \textit{Widget}.
 
 \subsezione{PropertiesDialog}
 \subsubsezione{Tipo, obiettivo e funzione del componente}
-Classe concreta che rappresenta  il menu di modifica delle propriet\` a di un oggetto selezionato o da disegnare sul canvas a seconda del tipo dello stesso, che sia linea, poligono o casella di testa, ognuno con le sue caratteristiche generiche e specifiche.
+Classe concreta che rappresenta  il menu di modifica delle propriet\` a di un oggetto selezionato o da disegnare sul canvas a seconda del tipo dello stesso, che sia linea, poligono o casella di testo, ognuno con le sue caratteristiche generiche e specifiche.
 \subsubsezione{Relazioni d'uso di altre componenti}
 \`E formata da pi\`u istanze aggregate tra cui \textit{BoundingRectagleSetter}, \textit{EdgeNumberSetter} e \textit{FontSetter}. Implementa \textit{Widget}.
 \subsubsezione{Interfacce e relazioni di uso da altre componenti}
